--- a/src/buckstore.orders.service.domain/buckstore.orders.service.domain.csproj
+++ b/src/buckstore.orders.service.domain/buckstore.orders.service.domain.csproj
@@ -9,6 +9,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Aggregates" />
+      <Folder Include="Aggregates\OrderAggregate" />
     </ItemGroup>
 </Project>
