refactor: fix business logic for payment and buyer
Create a child entity for PaymentMethod
Create Map DB map for Buyer e PaymentMethod

--- a/src/buckstore.orders.service.domain/buckstore.orders.service.domain.csproj
+++ b/src/buckstore.orders.service.domain/buckstore.orders.service.domain.csproj
@@ -7,4 +7,16 @@
     <ItemGroup>
         <PackageReference Include="MediatR" Version="8.0.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Aggregates\PaymentAggregate\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Aggregates\PaymentAggregate\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Aggregates\PaymentAggregate\**" />
+    </ItemGroup>
 </Project>
