chore: add a new level of directory for better organization

--- a/src/buckstore.orders.service.application/buckstore.orders.service.application.csproj
+++ b/src/buckstore.orders.service.application/buckstore.orders.service.application.csproj
@@ -17,6 +17,8 @@
     
     <ItemGroup>
       <Folder Include="EventHandlers\DomainEvents\OrderCreated" />
+      <Folder Include="EventHandlers\IntegrationEvents\Internal" />
+      <Folder Include="IntegrationEvents\Internal" />
     </ItemGroup>
 
 </Project>
