feat: start payment api integration
Create a proxy fot the payment api
Create a DTO

--- a/src/buckstore.orders.service.infrastructure.proxy.globalPayments/buckstore.orders.service.infrastructure.proxy.globalPayments.csproj
+++ b/src/buckstore.orders.service.infrastructure.proxy.globalPayments/buckstore.orders.service.infrastructure.proxy.globalPayments.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.common\buckstore.orders.service.infrastructure.common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="GlobalPayments.Api" Version="1.7.33" />
+    </ItemGroup>
+
 </Project>
