--- a/src/buckstore.orders.service.api.v1/buckstore.orders.service.api.v1.csproj
+++ b/src/buckstore.orders.service.api.v1/buckstore.orders.service.api.v1.csproj
@@ -8,6 +8,7 @@
         <PackageReference Include="MediatR" Version="8.0.1" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
     </ItemGroup>
 
     <ItemGroup>
