--- a/src/buckstore.orders.service.infrastructure.proxy.fkdPayments/buckstore.orders.service.infrastructure.proxy.fkdPayments.csproj
+++ b/src/buckstore.orders.service.infrastructure.proxy.fkdPayments/buckstore.orders.service.infrastructure.proxy.fkdPayments.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <RootNamespace>buckstore.orders.service.infrastructure.proxy.globalPayments</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
