refactor: remove duplicated WebApiBaseRequest.cs
Create methods to add a new card and make a purchase to a specific card
Create request and responses for each
Register new env on NativeInjectorBootstrapper.cs

--- a/src/buckstore.orders.service.infrastructure.proxy.fkdPayments/buckstore.orders.service.infrastructure.proxy.fkdPayments.csproj
+++ b/src/buckstore.orders.service.infrastructure.proxy.fkdPayments/buckstore.orders.service.infrastructure.proxy.fkdPayments.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <ProjectReference Include="..\buckstore.orders.service.application\buckstore.orders.service.application.csproj" />
       <ProjectReference Include="..\buckstore.orders.service.infrastructure.common\buckstore.orders.service.infrastructure.common.csproj" />
+      <ProjectReference Include="..\buckstore.orders.service.infrastructure.environment\buckstore.orders.service.infrastructure.environment.csproj" />
     </ItemGroup>
 
     <ItemGroup>
